corrigiendo algunos detalles

--- a/index.html
+++ b/index.html
@@ -127,7 +127,51 @@
                         <img src="images/toychiquito.jpg" alt="Proyecto Toy Chiquito">
                     </div>
                 </div>
-                <!-- Puedes duplicar .orgullo-slide para más proyectos -->
+                <div class="orgullo-slide">
+                    <div class="orgullo-img-container">
+                        <div class="orgullo-desc">
+                            <h3>Centro Comercial Plaza Central</h3>
+                            <p>Construcción de un moderno centro comercial con espacios comerciales, restaurantes y áreas de entretenimiento.</p>
+                        </div>
+                        <img src="images/toychiquito.jpg" alt="Proyecto Centro Comercial Plaza Central">
+                    </div>
+                </div>
+                <div class="orgullo-slide">
+                    <div class="orgullo-img-container">
+                        <div class="orgullo-desc">
+                            <h3>Puente San Miguel</h3>
+                            <p>Diseño y construcción de un puente vehicular de 150 metros sobre el río San Miguel, conectando dos comunidades.</p>
+                        </div>
+                        <img src="images/toychiquito.jpg" alt="Proyecto Puente San Miguel">
+                    </div>
+                </div>
+                <div class="orgullo-slide">
+                    <div class="orgullo-img-container">
+                        <div class="orgullo-desc">
+                            <h3>Residencial Los Pinos</h3>
+                            <p>Desarrollo de un complejo residencial de 50 viviendas con áreas comunes, parques y servicios integrados.</p>
+                        </div>
+                        <img src="images/toychiquito.jpg" alt="Proyecto Residencial Los Pinos">
+                    </div>
+                </div>
+                <div class="orgullo-slide">
+                    <div class="orgullo-img-container">
+                        <div class="orgullo-desc">
+                            <h3>Carretera Federal 57</h3>
+                            <p>Rehabilitación y ampliación de 25 kilómetros de la carretera federal, mejorando la conectividad regional.</p>
+                        </div>
+                        <img src="images/toychiquito.jpg" alt="Proyecto Carretera Federal 57">
+                    </div>
+                </div>
+                <div class="orgullo-slide">
+                    <div class="orgullo-img-container">
+                        <div class="orgullo-desc">
+                            <h3>Hospital Regional Norte</h3>
+                            <p>Construcción de un hospital de segundo nivel con 120 camas, quirófanos y servicios médicos especializados.</p>
+                        </div>
+                        <img src="images/toychiquito.jpg" alt="Proyecto Hospital Regional Norte">
+                    </div>
+                </div>
                 <button class="orgullo-arrow right" aria-label="Siguiente">></button>
             </div>
         </section>
@@ -208,14 +252,14 @@
                         <div class="contacto-icon contacto-icon-correo"></div>
                         <div>
                             <strong>Correo:</strong><br>
-                            info@convases.com
+                            info@thefuentescorp.com
                         </div>
                     </div>
                     <div class="contacto-info-item">
                         <div class="contacto-icon contacto-icon-telefono"></div>
                         <div>
                             <strong>Telefono:</strong><br>
-                            +503 2229 8000
+                            +52-961-2070662
                         </div>
                     </div>
                 </div>
@@ -262,14 +306,7 @@
                 <h4 class="footer-title">Contacto</h4>
                 <p class="footer-contact">
                     <strong>Email:</strong> info@thefuentescorp.com<br>
-                    <strong>Teléfono:</strong> +503 2229 8000
-                </p>
-            </div>
-            
-            <div class="footer-section">
-                <h4 class="footer-title">Nuestra Misión</h4>
-                <p class="footer-mission">
-                    "Transformamos visiones en realidades, construyendo infraestructuras que conectan comunidades y mejoran vidas."
+                    <strong>Teléfono:</strong> +52-961-2070662
                 </p>
             </div>
         </div>
