agregando detalles y video de proyecto ahualulco

--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
                         </div>
                         <img src="images/toychiquito.jpg" alt="Proyecto Toy Chiquito">
                     </div>
+                    <div class="orgullo-indicadores"></div>
                 </div>
                 <div class="orgullo-slide">
                     <div class="orgullo-img-container">
@@ -135,6 +136,7 @@
                         </div>
                         <img src="images/toychiquito.jpg" alt="Proyecto Centro Comercial Plaza Central">
                     </div>
+                    <div class="orgullo-indicadores"></div>
                 </div>
                 <div class="orgullo-slide">
                     <div class="orgullo-img-container">
@@ -144,6 +146,7 @@
                         </div>
                         <img src="images/toychiquito.jpg" alt="Proyecto Puente San Miguel">
                     </div>
+                    <div class="orgullo-indicadores"></div>
                 </div>
                 <div class="orgullo-slide">
                     <div class="orgullo-img-container">
@@ -153,6 +156,7 @@
                         </div>
                         <img src="images/toychiquito.jpg" alt="Proyecto Residencial Los Pinos">
                     </div>
+                    <div class="orgullo-indicadores"></div>
                 </div>
                 <div class="orgullo-slide">
                     <div class="orgullo-img-container">
@@ -162,6 +166,7 @@
                         </div>
                         <img src="images/toychiquito.jpg" alt="Proyecto Carretera Federal 57">
                     </div>
+                    <div class="orgullo-indicadores"></div>
                 </div>
                 <div class="orgullo-slide">
                     <div class="orgullo-img-container">
@@ -171,11 +176,17 @@
                         </div>
                         <img src="images/toychiquito.jpg" alt="Proyecto Hospital Regional Norte">
                     </div>
+                    <div class="orgullo-indicadores"></div>
                 </div>
                 <button class="orgullo-arrow right" aria-label="Siguiente">></button>
             </div>
         </section>
         <!-- Fin sección Nuestro Orgullo -->
+
+        <div class="porque-diferencia-text">porque la gente ve la diferencia...</div>
+        <div class="video-full-container">
+            <video src="images/ahualulco.mp4" controls playsinline style="width:100%;height:auto;display:block;"></video>
+        </div>
 
         <!-- Sección Nuestro Objetivo -->
         <section class="objetivo-section">
