--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
             <h2 class="servicios-title">Servicios</h2>
             <div class="servicios-grid">
                 <div class="servicio servicio-text servicioA">
-                    <h3>Planificacion</h3>
-                    <p> Te ayudamos a conceptualizar y estructurar tu proyecto desde cero, garantizando una hoja de ruta clara y eficiente.</p>
+                    <h3>Planificación</h3>
+                    <p>Te ayudamos a conceptualizar y estructurar tu proyecto desde cero, garantizando una hoja de ruta clara y eficiente.</p>
                 </div>
                 <div class="servicio servicio-img imgA ">
                     <img src="images/planificacion.png" alt="Servicio 1">
@@ -98,7 +98,7 @@
                     <p>Convertimos tus ideas en planos innovadores y estéticos, creando espacios funcionales y visualmente atractivos que superen tus expectativas.</p>
                 </div>
                 <div class="servicio servicio-text servicioA">
-                    <h3>Construccion</h3>
+                    <h3>Construcción</h3>
                     <p>Ejecutamos tu proyecto con calidad y precisión, construyendo estructuras sólidas y duraderas que cumplen con los más altos estándares.</p>
                 </div>
                 <div class="servicio servicio-img imgA">
@@ -108,7 +108,7 @@
                     <img src="images/remodelacion.jpg" alt="Servicio 4">
                 </div>
                 <div class="servicio servicio-text servicioB">
-                    <h3>Remodelacion</h3>
+                    <h3>Remodelación</h3>
                     <p>Transformamos y modernizamos tus espacios existentes, aportando frescura, funcionalidad y valor a tu propiedad.</p>
                 </div>
             </div>
@@ -120,68 +120,70 @@
             <h2 class="orgullo-title">Nuestro Orgullo</h2>
             <p class="orgullo-intro">Algunos de los proyectos que hemos realizado con pasión y dedicación.</p>
             <div class="orgullo-carousel">
-                <button class="orgullo-arrow left" aria-label="Anterior"><</button>
-                <div class="orgullo-slide active">
-                    <div class="orgullo-img-container">
-                        <div class="orgullo-desc">
-                            <h3>Toy Chiquito</h3>
-                            <p>Proyecto de juguetería creativa para niños, enfocado en el aprendizaje y la diversión.</p>
+                <button class="orgullo-arrow left" aria-label="Anterior">&lt;</button>
+                <div class="orgullo-slides-wrapper">
+                    <div class="orgullo-slide active">
+                        <div class="orgullo-img-container">
+                            <div class="orgullo-desc">
+                                <h3>Carretera Ahualulco</h3>
+                                <p>Proyecto de juguetería creativa para niños, enfocado en el aprendizaje y la diversión.</p>
+                            </div>
+                            <img src="images/carreteraAhualulco.jpg" alt="carreteraAhualulco">
                         </div>
-                        <img src="images/toychiquito.jpg" alt="Proyecto Toy Chiquito">
+                        <div class="orgullo-indicadores"></div>
                     </div>
-                    <div class="orgullo-indicadores"></div>
-                </div>
-                <div class="orgullo-slide">
-                    <div class="orgullo-img-container">
-                        <div class="orgullo-desc">
-                            <h3>Centro Comercial Plaza Central</h3>
-                            <p>Construcción de un moderno centro comercial con espacios comerciales, restaurantes y áreas de entretenimiento.</p>
+                    <div class="orgullo-slide">
+                        <div class="orgullo-img-container">
+                            <div class="orgullo-desc">
+                                <h3>Fraccionamiento Las Flores, San Luis Potosí</h3>
+                                <p>Pavimentación de calles fraccionamiento las flores, San Luis Potosí</p>
+                            </div>
+                            <img src="images/obra_las_flores.webp" alt="obra_lasflores">
                         </div>
-                        <img src="images/toychiquito.jpg" alt="Proyecto Centro Comercial Plaza Central">
+                        <div class="orgullo-indicadores"></div>
                     </div>
-                    <div class="orgullo-indicadores"></div>
-                </div>
-                <div class="orgullo-slide">
-                    <div class="orgullo-img-container">
-                        <div class="orgullo-desc">
-                            <h3>Puente San Miguel</h3>
-                            <p>Diseño y construcción de un puente vehicular de 150 metros sobre el río San Miguel, conectando dos comunidades.</p>
+                    <div class="orgullo-slide">
+                        <div class="orgullo-img-container">
+                            <div class="orgullo-desc">
+                                <h3>Fraccionamiento La Virgen, San Luis Potosí</h3>
+                                <p>Pavimentación de calles fraccionamiento la virgen, San Luis Potosí</p>
+                            </div>
+                            <img src="images/obra_calle_la_virgen.webp" alt="obra_calle_la_virgen">
                         </div>
-                        <img src="images/toychiquito.jpg" alt="Proyecto Puente San Miguel">
+                        <div class="orgullo-indicadores"></div>
                     </div>
-                    <div class="orgullo-indicadores"></div>
-                </div>
-                <div class="orgullo-slide">
-                    <div class="orgullo-img-container">
-                        <div class="orgullo-desc">
-                            <h3>Residencial Los Pinos</h3>
-                            <p>Desarrollo de un complejo residencial de 50 viviendas con áreas comunes, parques y servicios integrados.</p>
+                    <div class="orgullo-slide">
+                        <div class="orgullo-img-container">
+                            <div class="orgullo-desc">
+                                <h3>Residencial Los Pinos</h3>
+                                <p>Desarrollo de un complejo residencial de 50 viviendas con áreas comunes, parques y servicios integrados.</p>
+                            </div>
+                            <img src="images/toychiquito.jpg" alt="Proyecto Residencial Los Pinos">
                         </div>
-                        <img src="images/toychiquito.jpg" alt="Proyecto Residencial Los Pinos">
+                        <div class="orgullo-indicadores"></div>
                     </div>
-                    <div class="orgullo-indicadores"></div>
-                </div>
-                <div class="orgullo-slide">
-                    <div class="orgullo-img-container">
-                        <div class="orgullo-desc">
-                            <h3>Carretera Federal 57</h3>
-                            <p>Rehabilitación y ampliación de 25 kilómetros de la carretera federal, mejorando la conectividad regional.</p>
+                    <div class="orgullo-slide">
+                        <div class="orgullo-img-container">
+                            <div class="orgullo-desc">
+                                <h3>Carretera Federal 57</h3>
+                                <p>Rehabilitación y ampliación de 25 kilómetros de la carretera federal, mejorando la conectividad regional.</p>
+                            </div>
+                            <img src="images/toychiquito.jpg" alt="Proyecto Carretera Federal 57">
                         </div>
-                        <img src="images/toychiquito.jpg" alt="Proyecto Carretera Federal 57">
+                        <div class="orgullo-indicadores"></div>
                     </div>
-                    <div class="orgullo-indicadores"></div>
-                </div>
-                <div class="orgullo-slide">
-                    <div class="orgullo-img-container">
-                        <div class="orgullo-desc">
-                            <h3>Hospital Regional Norte</h3>
-                            <p>Construcción de un hospital de segundo nivel con 120 camas, quirófanos y servicios médicos especializados.</p>
+                    <div class="orgullo-slide">
+                        <div class="orgullo-img-container">
+                            <div class="orgullo-desc">
+                                <h3>Hospital Regional Norte</h3>
+                                <p>Construcción de un hospital de segundo nivel con 120 camas, quirófanos y servicios médicos especializados.</p>
+                            </div>
+                            <img src="images/toychiquito.jpg" alt="Proyecto Hospital Regional Norte">
                         </div>
-                        <img src="images/toychiquito.jpg" alt="Proyecto Hospital Regional Norte">
+                        <div class="orgullo-indicadores"></div>
                     </div>
-                    <div class="orgullo-indicadores"></div>
                 </div>
-                <button class="orgullo-arrow right" aria-label="Siguiente">></button>
+                <button class="orgullo-arrow right" aria-label="Siguiente">&gt;</button>
             </div>
         </section>
         <!-- Fin sección Nuestro Orgullo -->
@@ -337,28 +339,3 @@
 </html>
 
 <!--Falta arreglar seccion valores, ademas de seccion por que elegirnos, y terminar lo ultimo-->
-
-<style>
-.video-full-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0;
-    width: 100vw;
-}
-
-.video-full-container video {
-    display: block;
-    width: 100vw;
-    height: auto;
-    margin: 60px 0 40px 0;
-    background: #000;
-}
-
-@media (max-width: 900px) {
-    .video-full-container video {
-        width: 100vw;
-        margin: 24px 0 32px 0;
-    }
-}
-</style>
