--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
         <section class="about-minimal" id="nosotros">
             
             <div class="about-text">
-                <h2>Quienes somos?</h2>
+                <h2>¿Quiénes somos?</h2>
                 <h3 class="about-subtitle">Nuestro Compromiso</h3>
-                <p>
+                <p class="about-us">
                     Somos una empresa en expansión, dedicada a la <strong>construcción de obras de ingeniería civil</strong>, tanto en el sector público como en el privado. Nuestro mayor fuerte son la <strong>construcción de carreteras y puentes</strong>. Nos caracterizamos por brindar <strong>oportunidades a jóvenes ingenieros residentes</strong> que buscan su primera experiencia laboral, para formar su camino hacia la excelencia profesional.
                 </p>
             </div>
