--- a/index.html
+++ b/index.html
@@ -89,8 +89,7 @@
                         <p class="title">Planificacion</p>
                     </div>
                     <div class="flip-card-back">
-                        <p class="title">BACK</p>
-                        <p>Leave Me</p>
+                        <p class="content-card">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
                     </div>
                 </div>
             </div>
@@ -100,8 +99,7 @@
                         <p class="title">Diseño</p>
                     </div>
                     <div class="flip-card-back">
-                        <p class="title">BACK</p>
-                        <p>Leave Me</p>
+                        <p class="content-card">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
                     </div>
                 </div>
             </div>
@@ -111,8 +109,7 @@
                         <p class="title">Construccion</p>
                     </div>
                     <div class="flip-card-back">
-                        <p class="title">BACK</p>
-                        <p>Leave Me</p>
+                        <p class="content-card">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.  </p>
                     </div>
                 </div>
             </div>
@@ -122,8 +119,7 @@
                         <p class="title">Remodelacion</p>
                     </div>
                     <div class="flip-card-back">
-                        <p class="title">BACK</p>
-                        <p>Leave Me</p>
+                        <p class="content-card">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
                     </div>
                 </div>
             </div>
