--- a/index.html
+++ b/index.html
@@ -179,7 +179,66 @@
             </div>    
             <!--<script src="../assets/dist/js/bootstrap.bundle.min.js" class="astro-vvvwv3sm"></script>-->
         </section>
-        
+        <section class="section-servicios">
+            <p class="servicios-title">Ofrecemos lo Mejor</p>
+            <div class="container px-4 py-5" id="icon-grid">
+                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 py-5">
+                    <div class="col d-flex align-items-start"> 
+                        <img src="images/icon_planificacion.png" class="services-icon" 
+                              alt="Planificación" style="object-fit: contain;">
+                        <div>
+                            <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Planificacion</h3>
+                            <p>Paragraph of text beneath the heading to explain the heading.</p>
+                        </div>
+                    </div>
+                    <div class="col d-flex align-items-start"> 
+                        <img src="images/icon_disenio.webp" class="services-icon" 
+                              alt="Diseño" style="object-fit: contain;">
+                        <div>
+                            <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Diseño</h3>
+                            <p>Paragraph of text beneath the heading to explain the heading.</p>
+                        </div>
+                    </div>
+                    <div class="col d-flex align-items-start"> 
+                        <img src="images/icon_construccion.png" class="services-icon" 
+                             alt="Construcción" style="object-fit: contain;">
+                        <div>
+                            <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Construccion</h3>
+                            <p>Paragraph of text beneath the heading to explain the heading.</p>
+                        </div>
+                    </div>
+                    <div class="col d-flex align-items-start"> 
+                        <img src="images/icon_remodelacion.png" class="services-icon" 
+                              alt="Remodelación" style="object-fit: contain;">
+                        <div>
+                            <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Remodelacion</h3>
+                            <p>Paragraph of text beneath the heading to explain the heading.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    <!--Seccion MIsion y vision-->
+    <div class="bg-dark text-secondary px-4 py-5 text-center">
+        <p class="misionvision-title">Nuestros Cimientos</p>
+        <div class="container-mision">
+            <div class="div-mision"><h1 class="mision-title">Mision</h1></div>
+            <div class="col-lg-6 mx-auto">
+                <p class="fs-5 mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the
+                    world’s most popular front-end open source toolkit, featuring Sass variables and mixins,
+                    responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+            </div>
+        </div>
+        <div class="container-vision">
+            <div class="div-vision"><h1 class="vision-title">Vision</h1></div>
+            <div class="col-lg-6 mx-auto">
+                <p class="fs-5 mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the
+                    world’s most popular front-end open source toolkit, featuring Sass variables and mixins,
+                    responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+            </div>
+        </div>
+    </div>
+        <!--USAREMOS FEATURES ICON GRID DE BOOSTRAP-->
 
 
 
