--- a/index.html
+++ b/index.html
@@ -218,13 +218,14 @@
                 </div>
             </div>
         </section>
-    <!--Seccion MIsion y vision-->
+    <!--Seccion Mision y vision-->
     <div class="bg-dark text-secondary px-4 py-5 text-center">
         <p class="misionvision-title">Nuestros Cimientos</p>
+        <div class="space">
         <div class="container-mision">
             <div class="div-mision"><h1 class="mision-title">Mision</h1></div>
             <div class="col-lg-6 mx-auto">
-                <p class="fs-5 mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the
+                <p class="misionvision-text">Quickly design and customize responsive mobile-first sites with Bootstrap, the
                     world’s most popular front-end open source toolkit, featuring Sass variables and mixins,
                     responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
             </div>
@@ -232,11 +233,12 @@
         <div class="container-vision">
             <div class="div-vision"><h1 class="vision-title">Vision</h1></div>
             <div class="col-lg-6 mx-auto">
-                <p class="fs-5 mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the
+                <p class="misionvision-text">Quickly design and customize responsive mobile-first sites with Bootstrap, the
                     world’s most popular front-end open source toolkit, featuring Sass variables and mixins,
                     responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
             </div>
         </div>
+    </div>
     </div>
         <!--USAREMOS FEATURES ICON GRID DE BOOSTRAP-->
 
