--- a/index.html
+++ b/index.html
@@ -232,6 +232,23 @@
         <!--Seccion de aliados-->
         <section class="aliados-section">
             <h2 class="aliados-title">"Creciendo Juntos"<br>con Nuestros Aliados de Confianza</h2>
+            <p class="aliados-text">En The Fuentes Corporation,
+                nuestro compromiso y calidad
+                nos han permitido colaborar
+                con algunos de los nombres
+                más respetados en la
+                industria. A lo largo de los
+                años, hemos desarrollado
+                proyectos para clientes clave
+                en los sectores público y
+                privado, quienes confían en
+                nosotros para convertir sus
+                ideas en realidad. Cada obra
+                es un testimonio de nuestra
+                dedicación a construir
+                relaciones sólidas, basadas
+                en la confianza mutua y el
+                éxito compartido.</p>
             <!-- Carrusel de logos -->
     <div class="logos-carousel-section">
         <div class="logos-carousel-track">
@@ -284,19 +301,19 @@
             <div class="oficinas-list-col">
                 <ul class="oficinas-list">
                     <li>
-                        <span class="nombre-oficinas">Oficina Central, San Luis Potosi</span>
+                        <span class="nombre-oficinas"><img src="images/iconflecha.png" class="icon-flecha" alt="Flecha"> Oficina Central, San Luis Potosi</span>
                         <a href="https://maps.google.com/?q=San+Luis+Potosi" target="_blank" class="oficinas-link">Ver ubicación</a>
                     </li>
                     <li>
-                        <span class="nombre-oficinas">Sucursal, Ciudad de Mexico</span>
+                        <span class="nombre-oficinas"><img src="images/iconflecha.png" class="icon-flecha" alt="Flecha"> Sucursal, Ciudad de Mexico</span>
                         <a href="https://maps.google.com/?q=CDMX" target="_blank" class="oficinas-link">Ver ubicación</a>
                     </li>
                     <li>
-                        <span class="nombre-oficinas">Sucursal Hermosillo, Sonora</span>
+                        <span class="nombre-oficinas"><img src="images/iconflecha.png" class="icon-flecha" alt="Flecha"> Sucursal Hermosillo, Sonora</span>
                         <a href="https://maps.google.com/?q=Monterrey" target="_blank" class="oficinas-link">Ver ubicación</a>
                     </li>
                     <li>
-                        <span class="nombre-oficinas">Sucursal Tuxla Gutierrez, Chiapas</span>
+                        <span class="nombre-oficinas"><img src="images/iconflecha.png" class="icon-flecha" alt="Flecha"> Sucursal Tuxla Gutierrez, Chiapas</span>
                         <a href="https://maps.google.com/?q=Guadalajara" target="_blank" class="oficinas-link">Ver ubicación</a>
                     </li>
                 </ul>
