--- a/index.html
+++ b/index.html
@@ -20,31 +20,31 @@
 <body>
     <h1 class="visually-hidden">Headers examples</h1>
     <div class="header-container">
-        <header class="d-flex flex-wrap justify-content-between align-items-center py-3 mb-4 border-bottom">
-            <div class="d-flex align-items-center">
-                <a href="/" class="d-flex align-items-center text-decoration-none">
-                    <img src="Imagenes/LogoHB.png" alt="The Fuentes Corp Logo" width="150" height="auto" class="logo">
-                </a>
+        <!--<header class="header-container-two">-->
+        <div class="header-container-three">
+            <a href="/" class="d-flex align-items-center text-decoration-none">
+                <img src="Imagenes/LogoHB.png" alt="The Fuentes Corp Logo" width="150" height="auto" class="logo">
+            </a>
 
-                <!-- Botón Hamburguesa (visible solo en móvil) -->
-                <button class="navbar-toggler d-lg-none ms-3" type="button" id="sidebarToggle">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-            </div>
+            <!-- Botón Hamburguesa (visible solo en móvil) -->
+            <button class="navbar-toggler d-lg-none ms-3" type="button" id="sidebarToggle">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
 
-            <!-- Navbar principal (oculto en móvil) -->
-            <nav class="d-none d-lg-block">
-                <ul class="nav nav-pills align-items-center">
-                    <li class="nav-item"><a href="#nosotros" class="nav-link">Nosotros</a></li>
-                    <li class="nav-item"><a href="#servicios" class="nav-link">Servicios</a></li>
-                    <li class="nav-item"><a href="#proyectos" class="nav-link">Proyectos</a></li>
-                    <div class="sidebar-auth ms-3">
-                        <button href="#contacto" class="btn contactanos">Contáctanos</button>
-                        <button class="btn sign-in">Iniciar Sesión</button>
-                    </div>
-                </ul>
-            </nav>
-        </header>
+        <!-- Navbar principal (oculto en móvil) -->
+        <nav class="d-none d-lg-block">
+            <ul class="nav nav-pills align-items-center">
+                <li class="nav-item"><a href="#nosotros" class="nav-link">Nosotros</a></li>
+                <li class="nav-item"><a href="#servicios" class="nav-link">Servicios</a></li>
+                <li class="nav-item"><a href="#proyectos" class="nav-link">Proyectos</a></li>
+                <div class="sidebar-auth ms-3">
+                    <button href="#contacto" class="btn contactanos">Contáctanos</button>
+                    <button class="btn sign-in">Iniciar Sesión</button>
+                </div>
+            </ul>
+        </nav>
+        <!--</header>-->
     </div>
 
     <!-- Sidebar móvil (oculto por defecto) -->
@@ -84,7 +84,8 @@
                 <a href="#nosotros" class="btn cta-button">Iniciar</a>
             </div>
         </section>
-        <!-- Contenido principal -->
+
+        <!-- Seccion nosotros -->
         <section class="about-minimal" id="nosotros">
 
             <div class="about-text">
@@ -106,9 +107,13 @@
                 <img src="Imagenes/equipo.jpg" alt="Sobre nosotros" />
             </div>
         </section>
-        <!-- Fin sección minimalista -->
+        <!-- Fin sección nosotros -->
 
-        <!--Nuestro Orgullo-->
+
+        <div class="space"></div>
+
+
+        <!--Seccion proyectos-->
         <section class="section-proyectos" id="proyectos">
             <div class="proyectos-text">
                 <h2 class="proyectos-title">Nuestros Proyectos,<br> <span class="big-title-three">Nuestro Orgullo</span>
@@ -326,36 +331,33 @@
                     </div>
                 </div>
             </div>
+        </section>
+        <!-- Fin sección proyectos -->
 
+        <div class="space"></div>
 
+        <!-- Sección Video -->
+        <section class="section-video">
 
-
-
-
-
-
-
-
-
-
-
-            <div class="section-video">
-                <div class="video-flex-container">
-                    <div class="container-video">
-                        <video class="section-video-file" controls style="width:100%; border-radius: 20px;">
-                            <source src="Imagenes/ahualulco.mp4" type="video/mp4">
-                        </video>
-                    </div>
-                    <div class="proyectos-text">
-                        <h2 class="proyectos-title">Nuestras <br>obras <span class="big-title-two">Hablan</span></h2>
-                        <p class="proyectos-paragraph-two"><span class="negrita">Testigo de la transformación:</span> Un
-                            video te lleva por la impactante construcción de un extenso tramo de calle en Ahualulco,
-                            revelando el asombroso antes y después que maravilló a todos.</p>
-                    </div>
+            <div class="video-flex-container">
+                <div class="container-video">
+                    <video class="section-video-file" controls>
+                        <source src="Imagenes/ahualulco.mp4" type="video/mp4">
+                    </video>
+                </div>
+                <div class="video-text">
+                    <h2 class="proyectos-title">Nuestras <br>obras <span class="big-title-two">Hablan</span></h2>
+                    <p class="proyectos-paragraph-two"><span class="negrita">Testigo de la transformación:</span> Un
+                        video te lleva por la impactante construcción de un extenso tramo de calle en Ahualulco,
+                        revelando el asombroso antes y después que maravilló a todos.</p>
                 </div>
             </div>
-            <!--<script src="../assets/dist/js/bootstrap.bundle.min.js" class="astro-vvvwv3sm"></script>-->
         </section>
+        <!-- Fin sección video -->
+
+        <div class="space"></div>
+
+        <!--Seccion Servicios-->
         <section class="section-servicios" id="servicios">
             <p class="servicios-title">Ofrecemos lo <span class="big-title">Mejor</span></p>
             <div class="container px-4 py-5" id="icon-grid">
@@ -397,6 +399,10 @@
                 </div>
             </div>
         </section>
+        <!--Fin servicicos-->
+
+        <div class="space"></div>
+
         <!--Seccion de aliados-->
         <section class="aliados-section">
             <h2 class="aliados-title">"Creciendo Juntos"<br>con Nuestros <span class="big-title-four">Aliados de
@@ -426,40 +432,43 @@
                 </div>
             </div>
         </section>
+        <!--Fin seccion aliados-->
+
+        <div class="space"></div>
 
         <!--Seccion Mision y vision-->
-        <div class="bg-dark text-secondary px-4 py-5 text-center">
+        <section class="mision-vision-section">
             <p class="misionvision-title">Nuestros Cimientos</p>
-            <div class="space">
-                <div class="container-mision">
-                    <div class="div-mision">
-                        <h1 class="mision-title">Misión</h1>
-                    </div>
-                    <div class="col-lg-6 mx-auto">
-                        <p class="misionvision-paragraph">En The Fuentes Corporation, nuestro <b>compromiso</b> es
-                            ofrecer servicios de <b>construcción de alta calidad</b>, <i>eficientes</i> y a <b>costos
-                                competitivos</b>. Nos enfocamos en <i>soluciones integrales</i> que no solo cumplen tus
-                            <b>expectativas</b>, sino que también <i>generan valor para todos</i>. Siempre actuamos con
-                            <b>responsabilidad social, económica y ambiental</b>, porque entendemos que, al <i>crecer
-                                juntos</i>, construimos un <b>futuro mejor</b>.
-                        </p>
-                    </div>
+            <div class="container-mision">
+                <div class="div-mision">
+                    <h1 class="mision-title">Misión</h1>
                 </div>
-                <div class="container-vision">
-                    <div class="div-vision">
-                        <h1 class="vision-title">Visión</h1>
-                    </div>
-                    <div class="col-lg-6 mx-auto">
-                        <p class="misionvision-paragraph">Aspiramos a ser tu <b>aliado de confianza</b> en el desarrollo
-                            de <i>infraestructuras</i>. Nos destacamos por nuestra <b>calidad</b>, <i>innovación</i> y
-                            el <b>respeto por la seguridad laboral</b>. Queremos que nos veas como un <i>socio
-                                confiable</i> con el que puedes <b>contar para crecer juntos</b> y <i>lograr grandes
-                                cosas</i>, mientras <b>generamos valor para todos</b>.</p>
-                    </div>
+                <div class="col-lg-6 mx-auto">
+                    <p class="misionvision-paragraph">En The Fuentes Corporation, nuestro <b>compromiso</b> es
+                        ofrecer servicios de <b>construcción de alta calidad</b>, <i>eficientes</i> y a <b>costos
+                            competitivos</b>. Nos enfocamos en <i>soluciones integrales</i> que no solo cumplen tus
+                        <b>expectativas</b>, sino que también <i>generan valor para todos</i>. Siempre actuamos con
+                        <b>responsabilidad social, económica y ambiental</b>, porque entendemos que, al <i>crecer
+                            juntos</i>, construimos un <b>futuro mejor</b>.
+                    </p>
                 </div>
             </div>
-        </div>
+            <div class="container-vision">
+                <div class="div-vision">
+                    <h1 class="vision-title">Visión</h1>
+                </div>
+                <div class="col-lg-6 mx-auto">
+                    <p class="misionvision-paragraph">Aspiramos a ser tu <b>aliado de confianza</b> en el desarrollo
+                        de <i>infraestructuras</i>. Nos destacamos por nuestra <b>calidad</b>, <i>innovación</i> y
+                        el <b>respeto por la seguridad laboral</b>. Queremos que nos veas como un <i>socio
+                            confiable</i> con el que puedes <b>contar para crecer juntos</b> y <i>lograr grandes
+                            cosas</i>, mientras <b>generamos valor para todos</b>.</p>
+                </div>
+            </div>
+        </section>
+        <!-- Fin sección Misión y Visión -->
 
+        <div class="space"></div>
         <!-- Sección Oficinas -->
         <section class="oficinas-section">
             <div class="oficinas-container">
@@ -498,6 +507,10 @@
                 </div>
             </div>
         </section>
+        <!-- Fin sección Oficinas -->
+
+        <div class="space"></div>
+
         <!-- Sección Mapa Ubicación -->
         <section class="mapa-section">
             <div class="mapa-container">
@@ -507,7 +520,9 @@
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </section>
+        <!-- Fin sección Mapa Ubicación -->
 
+        <div class="space"></div>
 
         <!--Seccion opiniones-->
         <section class="opiniones-section">
@@ -544,6 +559,10 @@
                 <button class="opiniones-arrow right" aria-label="Siguiente">&#8594;</button>
             </div>
         </section>
+        <!--Fin seccion opiniones-->
+
+        <div class="space"></div>
+
         <!-- Sección de Contacto -->
         <section class="contacto-section" id="contacto">
             <h2 class="contacto-title">Contactanos</h2>
@@ -596,31 +615,33 @@
 
     <div class="container">
         <div class="container-footer-text">
-            <img  class="logo-footer" src="Imagenes/LogoHB.png" alt="Logo de The Fuentes Corporation"  >
+            <img class="logo-footer" src="Imagenes/LogoHB.png" alt="Logo de The Fuentes Corporation">
         </div>
 
-        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-            <div class="col-md-4 d-flex align-items-center"> <a href="/"
-                    class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1" aria-label="Bootstrap"> </a>
-                <span class="mb-3 mb-md-0 text-body-secondary">&copy; 2025 Company, Inc</span> </div>
-            <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+        <footer class="py-3 my-4">
+
+            <ul class="nav col-md-4 list-unstyled d-flex">
 
                 <li class="ms-3"><a class="text-body-secondary" href="#" aria-label="Facebook" width="24" height="24"
-                        aria-hidden="true"><img src="Imagenes/facebook.svg">
+                        aria-hidden="true"><img class="icon-footer" src="Imagenes/facebook.svg">
                         <use xlink:href="#facebook"></use>
                         </svg>
                     </a></li>
                 <li class="ms-3"><a class="text-body-secondary" href="#" aria-label="Instagram" width="24" height="24"
-                        aria-hidden="true"><img src="Imagenes/instagram.svg">
+                        aria-hidden="true"><img class="icon-footer" src="Imagenes/instagram.svg">
                         <use xlink:href="#instagram"></use>
                         </svg>
                     </a></li>
                 <li class="ms-3"><a class="text-body-secondary" href="#" aria-label="Whatsapp" width="24" height="24"
-                        aria-hidden="true"><img src="Imagenes/whatsapp.svg">
+                        aria-hidden="true"><img class="icon-footer" src="Imagenes/whatsapp.svg">
                         <use xlink:href="#whatsapp"></use>
                         </svg>
                     </a></li>
             </ul>
+            <div class="col-md-4 d-flex align-items-center"> <a href="/"
+                    class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1" aria-label="Bootstrap"> </a>
+                <span class="mb-3 mb-md-0 text-body-secondary">&copy; 2025 Company, Inc</span>
+            </div>
         </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
