--- a/index.html
+++ b/index.html
@@ -459,7 +459,6 @@
         <!-- Fin sección Misión y Visión -->
         <div class="space"></div>
         <!-- Sección Oficinas -->
-        <!-- Sección Oficinas -->
         <section class="oficinas-section">
             <div class="oficinas-container">
                 <div class="oficinas-content">
@@ -529,7 +528,7 @@
             emailjs.init('mU3pR2OMBpG5Lgu6T');
         </script>
         <!-- Sección de Contacto -->
-        <section class="contacto-section">
+        <section class="contacto-section" id="contacto">
             <div class="contacto-container">
                 <div class="contacto-content">
                     <h2 class="contacto-title">Contáctanos</h2>
