add: seccion oficinas

--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
                 <div class="row row-cols-1 row-cols-md-3 g-4">
                     <div class="col">
                         <div class="card h-100 shadow-sm">
-                            <img src="Imagenes/LogoHB.png" class="card-img-top" alt="Oficina Chiapas">
+                            <img src="Imagenes/oficinas/ofice1.png" class="card-img-top" alt="Oficina Chiapas">
                             <div class="card-body">
                                 <h5 class="card-title">Chiapas</h5>
                                 <p class="card-text">Ubicada en el corazón de Tuxtla Gutiérrez, nuestra oficina en Chiapas es el centro de operaciones para proyectos en el sur del país.</p>
@@ -463,7 +463,7 @@
                     </div>
                     <div class="col">
                         <div class="card h-100 shadow-sm">
-                            <img src="Imagenes/LogoHB.png" class="card-img-top" alt="Oficina CDMX">
+                            <img src="Imagenes/oficinas/office2.png" class="card-img-top" alt="Oficina CDMX">
                             <div class="card-body">
                                 <h5 class="card-title">Ciudad de México</h5>
                                 <p class="card-text">Nuestra oficina en CDMX coordina proyectos estratégicos y alianzas clave en la capital y zona metropolitana.</p>
@@ -472,7 +472,7 @@
                     </div>
                     <div class="col">
                         <div class="card h-100 shadow-sm">
-                            <img src="Imagenes/LogoHB.png" class="card-img-top" alt="Oficina Sonora">
+                            <img src="Imagenes/oficinas/office3.png" class="card-img-top" alt="Oficina Sonora">
                             <div class="card-body">
                                 <h5 class="card-title">Sonora</h5>
                                 <p class="card-text">Desde Hermosillo, la oficina de Sonora impulsa el desarrollo de infraestructura en el norte del país.</p>
