add:seccion oficinas

--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
         </section>
         <div class="space"></div>
         <!-- Sección Oficinas -->
-        <section class="oficinas-section-nueva py-5">
+        <section class="oficinas-section-nueva">
             <div class="container">
                 <h2 class="oficinas-title text-center mb-5">Nuestras <span class="big-title">Oficinas</span></h2>
                 <div class="row row-cols-1 row-cols-md-3 g-4">
