--- a/index.html
+++ b/index.html
@@ -220,6 +220,78 @@
                             </div>
                         </div>
                         <div class="col">
+                            <div class="card shadow-sm"> <img src="Imagenes/nuevaForesta/img5.jpeg" class="card-img-top"
+                                    alt="Nueva Foresta - img1">
+                                <title>Placeholder</title>
+                                </svg>
+                                <div class="card-body">
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <div>
+                                            <h4 class="card-title">Nueva Foresta</h4>
+                                            <h6 class="card-subtitle">Diseño Web</h6>
+                                        </div>
+                                        <div class="d-flex justify-content-between align-items-center">
+                                            <div class="btn-group">
+                                                <button type="button" class="btn btn-sm btn-outline-secondary view-btn"
+                                                    data-project="1" data-title="Nueva Foresta"
+                                                    data-subtitle="Diseño Web">
+                                                    View
+                                                </button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card shadow-sm"> <img src="Imagenes/nuevaForesta/img5.jpeg" class="card-img-top"
+                                    alt="Nueva Foresta - img1">
+                                <title>Placeholder</title>
+                                </svg>
+                                <div class="card-body">
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <div>
+                                            <h4 class="card-title">Nueva Foresta</h4>
+                                            <h6 class="card-subtitle">Diseño Web</h6>
+                                        </div>
+                                        <div class="d-flex justify-content-between align-items-center">
+                                            <div class="btn-group">
+                                                <button type="button" class="btn btn-sm btn-outline-secondary view-btn"
+                                                    data-project="1" data-title="Nueva Foresta"
+                                                    data-subtitle="Diseño Web">
+                                                    View
+                                                </button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card shadow-sm"> <img src="Imagenes/nuevaForesta/img5.jpeg" class="card-img-top"
+                                    alt="Nueva Foresta - img1">
+                                <title>Placeholder</title>
+                                </svg>
+                                <div class="card-body">
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <div>
+                                            <h4 class="card-title">Nueva Foresta</h4>
+                                            <h6 class="card-subtitle">Diseño Web</h6>
+                                        </div>
+                                        <div class="d-flex justify-content-between align-items-center">
+                                            <div class="btn-group">
+                                                <button type="button" class="btn btn-sm btn-outline-secondary view-btn"
+                                                    data-project="1" data-title="Nueva Foresta"
+                                                    data-subtitle="Diseño Web">
+                                                    View
+                                                </button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
                             <div class="card shadow-sm">
                                 <img src="Imagenes/lasFlores/img3.jpeg" class="card-img-top" alt="Las Flores - img1">
                                 <title>Placeholder</title>
@@ -450,14 +522,14 @@
         <!-- Sección Oficinas -->
         <section class="oficinas-section-nueva">
             <div class="container">
-                <h2 class="oficinas-title text-center mb-5">Nuestras <span class="big-title">Oficinas</span></h2>
+                <h2 class="oficinas-title-nueva text-center mb-5">Nuestras <span class="big-title">Oficinas</span></h2>
                 <div class="row row-cols-1 row-cols-md-3 g-4">
                     <div class="col">
                         <div class="card h-100 shadow-sm">
                             <img src="Imagenes/oficinas/ofice1.png" class="card-img-top" alt="Oficina Chiapas">
                             <div class="card-body">
                                 <h5 class="card-title">Chiapas</h5>
-                                <p class="card-text">Ubicada en el corazón de Tuxtla Gutiérrez, nuestra oficina en Chiapas es el centro de operaciones para proyectos en el sur del país.</p>
+                                <p class="card-text">Boulevard (Blvd. ) 28 de Agosto, Col. Fovissste II, Jardín Corona, Tuxtla Gutiérrez, Chiapas México. C.p. 29024</p>
                             </div>
                         </div>
                     </div>
@@ -465,8 +537,8 @@
                         <div class="card h-100 shadow-sm">
                             <img src="Imagenes/oficinas/office2.png" class="card-img-top" alt="Oficina CDMX">
                             <div class="card-body">
-                                <h5 class="card-title">Ciudad de México</h5>
-                                <p class="card-text">Nuestra oficina en CDMX coordina proyectos estratégicos y alianzas clave en la capital y zona metropolitana.</p>
+                                <h5 class="card-title">San Luis Potosi</h5>
+                                <p class="card-text">Boulevard (Blvd.) Avenida Chapultepec No. 1385-3, Col. Privadas del Pedregal, San Luis Potosí, San Luis Potosí, México. C.p.  78295</p>
                             </div>
                         </div>
                     </div>
@@ -474,8 +546,9 @@
                         <div class="card h-100 shadow-sm">
                             <img src="Imagenes/oficinas/office3.png" class="card-img-top" alt="Oficina Sonora">
                             <div class="card-body">
-                                <h5 class="card-title">Sonora</h5>
-                                <p class="card-text">Desde Hermosillo, la oficina de Sonora impulsa el desarrollo de infraestructura en el norte del país.</p>
+                                <h5 class="card-title">Sucursal en El Salvador </h5>
+                                <p class="card-text">Urbanización Madre Selva III, Calle llama del Bosque Poniente, edificio  Avante local No. 3-13, del municipio de Antiguo Cuscatlán, departamento de la Libertad, San Salvador, El Salvador
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -649,7 +722,7 @@
                         d="M13.601 2.326A7.85 7.85 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.9 7.9 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.9 7.9 0 0 0 13.6 2.326zM7.994 14.521a6.6 6.6 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.56 6.56 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592m3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.73.73 0 0 0-.529.247c-.182.198-.691.677-.691 1.654s.71 1.916.81 2.049c.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232" />
                 </svg>
             </ul>
-            <p class="text-center">&copy; 2025 The Fuentes Corporation</p>
+            <p>&copy; 2025 The Fuentes Corporation</p>
         </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
